# pycomponents

./: pyproject.toml
pycomponents/: components.py  draw.py  io.py  system.py
tests/: test.csv  test.json  test_components.py  test_draw.py  test_io.py  test_system.py
