[tool.poetry]
name = "pycomponents"
version = "0.1.0"
description = ""
authors = ["mizuno <h23ms416@hirosaki-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
pyjson = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
